fixed styles, scrollbar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,29 @@
+html {
+  overflow-y: scroll;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  // box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+  background-color: rgb(230, 230, 230);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgba($accent_color, 0.6);
+  border-radius: 10px;
+}
+
 body {
   margin: 0;
   padding: 0;
-  padding-top: calc(46px + 16px);
+  padding-top: calc(46px + 32px);
 
   * {
     font-family: Roboto;
@@ -78,24 +100,24 @@ button {
 
     border-radius: 4px;
 
+    transition: background-color 0.35s ease, box-shadow 0.3s ease;
+
     &-accent {
       color: #ffffff;
       background-color: $accent_color;
 
-      transition: background-color 0.35s ease;
-
       &:hover {
         background-color: rgba($accent_color, 0.85);
+        box-shadow: 0px 7px 12px #e1e1e1;
       }
     }
     &-secondary {
       color: #ffffff;
       background-color: $secondary_color;
 
-      transition: background-color 0.35s ease;
-
       &:hover {
         background-color: rgba($secondary_color, 0.85);
+        box-shadow: 0px 7px 12px #e1e1e1;
       }
     }
     &.btn-p1 {
